@@ -1,0 +1,1 @@
+kate-*.tar.xz
