@@ -1,0 +1,1 @@
+66d0b3110fd4a96af3c62edd8c8f6e7d  kate-4.10.5.tar.xz
