@@ -1,0 +1,1 @@
+pykde4-*.tar.xz
