@@ -1,0 +1,1 @@
+c785e01abfe6fb19c34dce0294b8054f  pykde4-4.10.5.tar.xz
