@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|' on
+# the right side marks the last column you can put a character in.  You must make
+# exactly 11 lines for the formatting to be correct.  It's also customary to
+# leave one space after the ':'.
+
+      |-----handy-ruler------------------------------------------------------|
+pykde4: pykde4 (Python bindings for KDE4)
+pykde4:
+pykde4: Python bindings for KDE4.
+pykde4:
+pykde4: For more information, visit:  http://www.kde.org
+pykde4:
+pykde4:
+pykde4:
+pykde4:
+pykde4:
+pykde4:
